Navbar: Ensure drawer expands to bottom of screen on mobile.
See #3530.

--- a/wp-content/themes/openlab/style.less
+++ b/wp-content/themes/openlab/style.less
@@ -506,7 +506,7 @@ body.drawer-open {
 		position: fixed;
 		top: 0;
 		left: 0;
-		bottom: 16px;
+		bottom: 0;
 		width: 100%;
 	}
 
